--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,52 @@
-/*  sezione header  */
+/*  SEZIONE HEADER  */
 .up-header{
     height: 30px;
     width: 100%;
 }
 
-.up-header img{
-    
+.up-header img{   
     width: 5%;
 }
 
 
+
+
+
+
+
+/* sezione contatti social */
+.contatti-social{
+    background-color: rgb(203, 243, 164);
+    height: 300px
+}
+
+
+
+/* SEZIONE FOOTER */
+footer{
+    background-color: #00439c;
+}
+
+.item-up-footer{    
+    
+    background-color: rgb(160, 75, 100);
+   
+}
+
+.item-up-footer img{   
+    width: 95px;
+
+}
+
+
+
+
+
+.content-down-footer{          
+    background-color: aqua;
+    border: 1px solid black;
+}
+
+.img-down-footer{    
+    width: 190px;
+}
