--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* COMMON */
+.py_100{
+    padding: 100px 0;
+}
+
+
+
 /*  SEZIONE HEADER  */
 .up-header{
     height: 30px;
@@ -8,6 +15,8 @@
     width: 5%;
 }
 
+/* SEZIONE MAIN */
+
 
 
 
@@ -17,9 +26,19 @@
 /* sezione contatti social */
 .contatti-social{
     background-color: rgb(203, 243, 164);
-    height: 300px
+    height: 500px
 }
 
+.icon-img{
+    width: 150px;
+    height: 150px;
+
+}
+
+.item-img{
+    width: 100%;
+    
+}
 
 
 /* SEZIONE FOOTER */
