tolto scritte mini img ps5 sotto i 768px

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,11 @@
 
 /* sezione ps5 */
 .icon-text-ps5{
-    width: 100%;
+    width: 50%;
+}
+
+.icon-text-ps5-xs{
+    width: 80%;
 }
 
 /* sezione it takes two */
