--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,18 @@
     background-color: #cd3d0f;
 }
 
+.icon-jumbo {
+    border-radius: 10px;
+    transition: 0,8s;
+    position: relative;
+}
+.icon-jumbo:hover {
+    bottom: 6px;     
+}
 
 /* sezione ps5 */
 .icon-text-ps5{
-    width: 50%;
-}
-
-.icon-text-ps5-xs{
-    width: 80%;
+    width: 60%;
 }
 
 /* sezione it takes two */
